# for_test

./: README.md
DOCKER_FULLSTACK_APP/: .gitignore  docker-compose.yml
DOCKER_FULLSTACK_APP/backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
DOCKER_FULLSTACK_APP/backend/alembic/: env.py
DOCKER_FULLSTACK_APP/backend/alembic/versions/: 9e2d650be80e_add_user.py
DOCKER_FULLSTACK_APP/backend/app/: database.py  main.py
DOCKER_FULLSTACK_APP/backend/app/cruds/: __init__.py  user.py
DOCKER_FULLSTACK_APP/backend/app/models/: user.py
DOCKER_FULLSTACK_APP/backend/app/routers/: user.py
DOCKER_FULLSTACK_APP/frontend/: Dockerfile  package-lock.json  package.json
DOCKER_FULLSTACK_APP/frontend/my-app/: package-lock.json  package.json
DOCKER_FULLSTACK_APP/frontend/my-app/src/: App.tsx  api.ts
DOCKER_FULLSTACK_APP/frontend/my-app/src/components/: create-user-button.tsx
DOCKER_NEXTJS_APP/backend/: pyproject.toml
DOCKER_NEXTJS_APP/backend/app/: main.py
DOCKER_NEXTJS_APP/frontend/: package-lock.json  package.json
DOCKER_NEXTJS_APP/frontend/my-app/src/app/: page.tsx  test-component.tsx
