[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["uchida"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13"
fastapi = "0.115.4"
uvicorn = "0.32.0"
pymysql = "1.1.1"
sqlalchemy = "2.0.36"
cryptography = "^43.0.3"
alembic = "^1.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
